--- a/src/assets/responsive.scss
+++ b/src/assets/responsive.scss
@@ -1,9 +1,10 @@
 .active {
-    background: grey;
+    background: lightgrey;
     // border-radius: 0.5rem;
     font-weight: 600;
     width: 100%;
-    height: 3rem;
+    // height: 3rem;
+    border-radius: 0.5rem;
     display: flex;
     align-items: center;
     color: white;
@@ -35,7 +36,8 @@
         position: fixed;
         margin-right: 70%;
         margin-top: 2rem;
-        background-color: lightgray;
+        background-color: black;
+        // word-wrap: break-word;
         height: 100%;
         // padding: 1rem;
         border-radius: 0.5rem;
@@ -45,6 +47,10 @@
             font-size: 2rem;
             cursor: pointer;
             margin-top: 1.5rem;
+            a {
+                text-decoration: none;
+                color: white;
+            }
         }
     }
 }
@@ -55,12 +61,15 @@
         flex-direction: column;
         width: 100%;
         background-color: black;
-        overflow-x: scroll;
+        -webkit-overflow-scrolling: touch;
+        // overflow-x: scroll;
         .product__tab {
-            scroll-behavior: smooth;
-            overflow-wrap: break-word;
-            white-space: nowrap;
+            // scroll-behavior: smooth;
+            // overflow-wrap: break-word;
+            // white-space: nowrap;
             overflow-x: auto;
+            // width: 100%;
+            // -webkit-overflow-scrolling: touch;
             flex-direction: row;
             margin: 0;
             top: 0;
@@ -73,7 +82,7 @@
             gap: 1rem;
             p {
                 width: 50%;
-                font-size: 1rem;
+                font-size: 0.8rem;
                 width: 5rem;
                 padding: 1rem;
             }
