--- a/src/assets/responsive.scss
+++ b/src/assets/responsive.scss
@@ -4,7 +4,7 @@
 body {
     // transition-duration: 500ms;
     font-family: sans-serif;
-    scroll-behavior: smooth;
+    // scroll-behavior: smooth;
 }
 
 // .s_active {
@@ -13,11 +13,6 @@ body {
 // .b_active {
 //     background-color: red;
 // }
-.temp {
-    height: 100vh;
-    overflow-y: scroll;
-}
-
 .b_active {
     background: lightgrey;
     // border-radius: 0.5rem;
@@ -52,9 +47,9 @@ body {
 .scroll {
     display: flex;
     justify-content: flex-end;
-    scroll-behavior: smooth;
+    // scroll-behavior: smooth;
     .product__tab {
-        scroll-behavior: smooth;
+        // scroll-behavior: smooth;
         position: fixed;
         margin-right: 70%;
         margin-top: 2rem;
@@ -84,10 +79,10 @@ body {
         flex-direction: column;
         width: 100%;
         background-color: black;
-        -webkit-overflow-scrolling: touch;
-        overflow-y: auto;
+        // -webkit-overflow-scrolling: touch;
+        overflow-y: scroll;
         .product__tab {
-            overflow-x: auto;
+            overflow-x: scroll;
             flex-direction: row;
             margin: 0;
             top: 0;
@@ -97,6 +92,7 @@ body {
             width: 100%;
             display: flex;
             align-items: center;
+            position: fixed;
             gap: 1rem;
             p {
                 width: 50%;
@@ -105,12 +101,11 @@ body {
                 padding: 1rem;
             }
         }
-        // #sushi {
-        //     background-color: red;
-        // }
+        .temp {
+            height: 100vh;
+            overflow-y: scroll;
+        }
         .products {
-            // margin-top: 5rem;
-            scroll-behavior: smooth;
             padding-top: 50px;
             width: 100%;
             display: flex;
